teste compilador atuializado